--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.10",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.5",
+    "prisma": "^4.9.0",
     "typescript": "^4.9.4"
   }
 }
