--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
